Update third party licences

--- a/third-party-licenses.html
+++ b/third-party-licenses.html
@@ -4634,7 +4634,6 @@ limitations under the License.</pre>
                     <li><a href=" https://github.com/smol-rs/async-fs ">async-fs 1.6.0</a></li>
                     <li><a href=" https://github.com/smol-rs/async-io ">async-io 1.13.0</a></li>
                     <li><a href=" https://github.com/smol-rs/async-lock ">async-lock 2.7.0</a></li>
-                    <li><a href=" https://github.com/smol-rs/async-process ">async-process 1.7.0</a></li>
                     <li><a href=" https://github.com/smol-rs/async-task ">async-task 4.4.0</a></li>
                     <li><a href=" https://github.com/smol-rs/atomic-waker ">atomic-waker 1.1.1</a></li>
                     <li><a href=" https://github.com/cuviper/autocfg ">autocfg 1.1.0</a></li>
@@ -4711,8 +4710,6 @@ limitations under the License.</pre>
                     <li><a href=" https://github.com/bluss/scopeguard ">scopeguard 1.1.0</a></li>
                     <li><a href=" https://github.com/ctz/sct.rs ">sct 0.7.0</a></li>
                     <li><a href=" https://github.com/toml-rs/toml ">serde_spanned 0.6.1</a></li>
-                    <li><a href=" https://github.com/vorner/signal-hook ">signal-hook 0.3.15</a></li>
-                    <li><a href=" https://github.com/vorner/signal-hook ">signal-hook-registry 1.4.1</a></li>
                     <li><a href=" https://github.com/servo/rust-smallvec ">smallvec 1.10.0</a></li>
                     <li><a href=" https://github.com/rust-lang/socket2 ">socket2 0.4.9</a></li>
                     <li><a href=" https://github.com/dtolnay/syn ">syn 1.0.109</a></li>
@@ -11017,6 +11014,7 @@ SOFTWARE.
                     <li><a href=" https://crates.io/crates/crunchy ">crunchy 0.2.2</a></li>
                     <li><a href=" https://github.com/DimaKudosh/difflib ">difflib 0.4.0</a></li>
                     <li><a href=" http://github.com/SSheldon/rust-dispatch ">dispatch 0.2.0</a></li>
+                    <li><a href=" https://github.com/amPerl/egui-phosphor ">egui-phosphor 0.1.0</a></li>
                     <li><a href=" https://github.com/SSheldon/malloc_buf ">malloc_buf 0.0.6</a></li>
                     <li><a href=" http://github.com/SSheldon/rust-objc-foundation ">objc-foundation 0.1.1</a></li>
                     <li><a href=" https://github.com/madsmtm/objc2 ">objc-sys 0.2.0-beta.2</a></li>
@@ -11164,8 +11162,8 @@ THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRES
                     <li><a href=" https://github.com/AltF02/x11-rs.git ">x11-dl 2.21.0</a></li>
                     <li><a href=" https://github.com/zeenix/xdg-home ">xdg-home 1.0.0</a></li>
                     <li><a href=" https://github.com/zeenix/xdg-home ">xdg-home 1.0.0</a></li>
-                    <li><a href=" https://github.com/dbus2/zbus/ ">zbus 3.13.0</a></li>
-                    <li><a href=" https://github.com/dbus2/zbus/ ">zbus_macros 3.13.0</a></li>
+                    <li><a href=" https://gitlab.freedesktop.org/dbus/zbus/ ">zbus 3.12.0</a></li>
+                    <li><a href=" https://gitlab.freedesktop.org/dbus/zbus/ ">zbus_macros 3.12.0</a></li>
                     <li><a href=" https://github.com/dbus2/zbus/ ">zbus_names 2.5.1</a></li>
                     <li><a href=" https://github.com/dbus2/zbus/ ">zvariant 3.13.0</a></li>
                     <li><a href=" https://github.com/dbus2/zbus/ ">zvariant_derive 3.13.0</a></li>
@@ -11200,7 +11198,7 @@ DEALINGS IN THE SOFTWARE.
                 <h3 id="MIT">MIT License</h3>
                 <h4>Used by:</h4>
                 <ul class="license-used-by">
-                    <li><a href=" https://github.com/winnow-rs/winnow ">winnow 0.4.1</a></li>
+                    <li><a href=" https://github.com/winnow-rs/winnow ">winnow 0.4.6</a></li>
                 </ul>
                 <pre class="license-text">Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
